--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Europe/Bucharest
 
 title: Andrei Datcu # the main title
 
-tagline: DevOps Engineer # it will display as the sub-title
+tagline: DevOps Engineer & UNIX enthusiast # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  DevOps Engineer
+  DevOps Engineer & UNIX enthusiast
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
